# coauthor-studio

./: .gitignore  20250418.txt  DEV.md  MARKETING.md  SPEC0.md  SPEC1_updated.md  SPEC2_lexical_backend.md  USAGE.md  clickySpec.md  my_draft.txt  netlify.toml  pyproject.toml  render.yaml  requirements.txt
modules/voice/: COMMAND_LIST.md
modules/voice/characterbuilder/: AutoCharacterDraftCreate.md  CHANGES.md  Case_A_equals_B_Patch.md  ExtractionPatch_Immediate.md  SPEC0.md  characterbuilder_spec_basic.md  characterbuilder_spec_full.md  claude_characterbuilder_ui_dialog_spec.md  claude_characterbuilder_updated.md  claude_spec_dialog_delta_update_loop.md
netlify/functions/: api.py
projects/dummy_project/: config.json  draft.md  project_meta.json  sentence_history.jsonl
projects/dummy_project/fiction/: CHARACTERS.md  FEEDBACK.md  PLOT.md  RULES.md  STYLE.md  TIMELINE.md
projects/dummy_project/knowledge/: RULES.md  glossary.json  papers.json
projects/dummy_render/: config.json  project_meta.json
projects/dummy_render/dialog_drafts/: 2026-04-18T15-35-02_me__bob_vs_me__bob_at_a_petrol_station.md  2026-04-18T16-08-47_me__bob_in_a_petrol_station.md  2026-04-18T16-13-00_me__bob_just_about_to_approach_her.md  2026-04-18T16-16-18_me__bob_just_about_to_approach_her.md  2026-04-18T16-17-18_me__bob_just_about_to_approach_her.md  2026-04-18T16-20-21_me__bob_just_about_to_approach_her.md  2026-04-18T16-22-10_me__bob_just_about_to_approach_her.md  (+4 more)
prompts/rewrite/: dialogue_rewrite.md
scripts/: fetch_lexical_data.py
src/augmented_fiction/cli/: main.py
(+82 files in other folders)
